implementando primeira e segunda instruções para interface e generics